a)revise layout of project detail page b)fix bugs in search c)add breadcum in sample and antibody page d)project sample of public type visible to anonymous users e)ABP1 to ABP00001 and use ABP and ABS id in url

--- a/web-app/css/upload.css
+++ b/web-app/css/upload.css
@@ -113,3 +113,8 @@
 #view-report {
   padding: 4px 7px;
 }
+
+.project-button {
+    position: relative;
+    left: 85%;
+}
